@@ -1,3 +1,10 @@
+2001-11-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* XMakefile.dist deflate.c: removed, not used
+	* tagtable.c: removed, autogenerated files
+	* XMakefile (mktable w3mbookmark w3mhelperpanel): use LIBS2
+	* configure: add $bsdlib
+
 2001-11-20  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
 	* frame.c (newFrameSet): fix possible buffer overrun
